more styles, form validation

--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@
             </div>
             <div>
                 <h3>Or even</h3>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Follow me on YouTube</a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener">
+                    Follow me on YouTube
+                </a>
             </div>
         </section>
     </main>
