--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     <script src="js/nav.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/contact.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
