load fonts from cdn, more styling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/background.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/header-mobile.css">
     <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/mobile-adjustments.css">
 </head>
 <body>
     <div id="waves" class="background">
@@ -233,6 +233,9 @@
                     <textarea id="message" name="message" rows="10" cols="30" maxlength="2000" required></textarea>
                     <input type="submit" value="Send">
                 </form>
+                <div id="under-construction">
+                    <span>Under Construction</span>
+                </div>
             </div>
             <div>
                 <h3>Or even</h3>
