update svg palette

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
     <div id="waves" class="background">
         <svg viewBox="0 0 100 100">
-            <path d="M0,0" fill="indigo" fill-opacity="1"/>
-            <path d="M0,0" fill="beige" fill-opacity="1"/>
-            <path d="M0,0" fill="goldenrod" fill-opacity="1"/>
-            <path d="M0,0" fill="slategray" fill-opacity="1"/>
-            <path d="M0,0" fill="indigo" fill-opacity="1"/>
-            <path d="M0,0" fill="beige" fill-opacity="1"/>
-            <path d="M0,0" fill="goldenrod" fill-opacity="1"/>
-            <path d="M0,0" fill="black" fill-opacity="1"/>
+            <path d="M0,0" fill="#8d9ed0"   fill-opacity="1"/>
+            <path d="M0,0" fill="beige"     fill-opacity="1"/>
+            <path d="M0,0" fill="goldenrod" fill-opacity=".7"/>
+            <path d="M0,0" fill="#505557"   fill-opacity="1"/>
+            <path d="M0,0" fill="#8d9ed0"   fill-opacity="1"/>
+            <path d="M0,0" fill="beige"     fill-opacity="1"/>
+            <path d="M0,0" fill="goldenrod" fill-opacity=".7"/>
+            <path d="M0,0" fill="#505557"   fill-opacity="1"/>
         </svg>
     </div>
     <header>
