update form to send relative request

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <h3>Or send an email</h3>
                 <p>like it's 1999</p>
                 <br/>
-                <form action="mailto:lul@what.no" enctype="text/plain" method="post">
+                <form enctype="text/plain" method="post">
                     <label for="email">Your Email:</label>
                     <input type="text" id="email" name="email" maxlength="50" required>
                     <label for="topic">Topic:</label>
