improve submit info

--- a/index.html
+++ b/index.html
@@ -233,6 +233,10 @@
                     <textarea id="message" name="message" rows="10" cols="30" maxlength="2000" required></textarea>
                     <input name="form_submit" type="submit" value="Send">
                 </form>
+                <dialog id="feedbackDialog">
+                    <div id="feedbackContent"></div>
+                    <button id="closeDialogBtn">Close</button>
+                </dialog>
             </div>
             <div>
                 <h3>Or even</h3>
