--- a/html/background.html
+++ b/html/background.html
@@ -1,12 +1,13 @@
 <svg viewBox="0 0 100 100">
-    <path d="M0,0" fill="#8d9ed0" fill-opacity="1"/>
-    <path d="M0,0" fill="beige" fill-opacity="1"/>
-    <path d="M0,0" fill="goldenrod" fill-opacity=".7"/>
-    <path d="M0,0" fill="#505557" fill-opacity="1"/>
-    <path d="M0,0" fill="#8d9ed0" fill-opacity="1"/>
-    <path d="M0,0" fill="beige" fill-opacity="1"/>
-    <path d="M0,0" fill="goldenrod" fill-opacity=".7"/>
-    <path d="M0,0" fill="#505557" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-4)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-3)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-2)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-1)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-4)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-3)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-2)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-1)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-4)" fill-opacity=".3"/>
 </svg>
 <style>
     .background {
