sunset color scheme

--- a/html/background.html
+++ b/html/background.html
@@ -1,13 +1,14 @@
 <svg viewBox="0 0 100 100">
-    <path d="M0,0" fill="var(--background-4)" fill-opacity=".3"/>
-    <path d="M0,0" fill="var(--background-3)" fill-opacity=".3"/>
-    <path d="M0,0" fill="var(--background-2)" fill-opacity=".3"/>
-    <path d="M0,0" fill="var(--background-1)" fill-opacity=".3"/>
-    <path d="M0,0" fill="var(--background-4)" fill-opacity=".3"/>
-    <path d="M0,0" fill="var(--background-3)" fill-opacity=".3"/>
-    <path d="M0,0" fill="var(--background-2)" fill-opacity=".3"/>
-    <path d="M0,0" fill="var(--background-1)" fill-opacity=".3"/>
-    <path d="M0,0" fill="var(--background-4)" fill-opacity=".3"/>
+    <path d="M0,0" fill="var(--background-1)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-2)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-3)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-4)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-5)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-1)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-2)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-3)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-4)" fill-opacity="1"/>
+    <path d="M0,0" fill="var(--background-5)" fill-opacity="1"/>
 </svg>
 <style>
     .background {
