--- a/html/contact.html
+++ b/html/contact.html
@@ -1,7 +1,23 @@
 <h2>Contact</h2>
 <div>
     <h3>Reach out on social</h3>
-    Here's my <a href="https://www.linkedin.com/in/alexanderlitvak">LinkedIn Profile</a>
+    Here's my
+    <ul>
+        <li id="link-linkedin">
+            <a href="https://www.linkedin.com/in/alexanderlitvak" target="_blank">
+                LinkedIn<svg viewBox="0 0 16 16" height="30">
+                    <path fill="current" d="M14 0H2a1 1 0 00-1 1v15l3-2h10a1 1 0 001-1V1a1 1 0 00-1-1zM5 12H3V5h2zM4 4.2A1.27 1.27 0 012.75 3a1.25 1.25 0 012.5 0A1.27 1.27 0 014 4.2zm9 7.8h-2V8.73c0-.79-.18-1.93-1.34-1.93A1.74 1.74 0 008 8.61V12H6V5h1.85v1a2.72 2.72 0 012.29-1.2C12.27 4.8 13 6.09 13 8.29z"/>
+                </svg>
+            </a>
+        </li>
+        <li id="link-github">
+            <a href="https://github.com/traumst" target="_blank">
+                Github<svg viewBox="0 0 16 16" height="30">
+                    <path fill="current" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+                </svg>
+            </a>
+        </li>
+    </ul>
 </div>
 <div>
     <h3>Or send an email</h3>
@@ -31,6 +47,11 @@
     section#contact form > div {
         display: flex;
         justify-content: space-between;
+    }
+    ul {
+        display: flex;
+        list-style: none;
+        justify-content: space-evenly;
     }
     form {
         background-color: var(--section-background-color);
