--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/mobile-adjustments.css">
+    <script src="js/htmx.1.9.10.min.js"></script>
 </head>
 <body>
     <div id="waves" class="background"
@@ -26,6 +27,7 @@
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#demos">Demos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -43,6 +45,12 @@
             <div>Loading about section...</div>
         </section>
 
+        <section id="demos"
+                 hx-get="/html/demos.html"
+                 hx-trigger="intersect once">
+            <div>Loading demos section...</div>
+        </section>
+
         <section id="contact"
                  hx-get="/html/contact.html"
                  hx-trigger="intersect once">
@@ -50,9 +58,24 @@
         </section>
     </main>
     <footer>
-        <p>&copy;<span class="current-year"></span> Alexander Litvak</p>
+        <p>
+            &copy;<span class="current-year"></span> Alexander Litvak
+            &nbsp;
+            <a href="https://www.linkedin.com/in/alexanderlitvak" target="_blank">
+                <svg viewBox="0 0 16 16" height="20" data-supported-dps="16x16">
+                    <path fill="current"
+                          d="M14 0H2a1 1 0 00-1 1v15l3-2h10a1 1 0 001-1V1a1 1 0 00-1-1zM5 12H3V5h2zM4 4.2A1.27 1.27 0 012.75 3a1.25 1.25 0 012.5 0A1.27 1.27 0 014 4.2zm9 7.8h-2V8.73c0-.79-.18-1.93-1.34-1.93A1.74 1.74 0 008 8.61V12H6V5h1.85v1a2.72 2.72 0 012.29-1.2C12.27 4.8 13 6.09 13 8.29z"/>
+                </svg>
+            </a>
+            &nbsp;
+            <a href="https://github.com/traumst" target="_blank">
+                <svg viewBox="0 0 16 16" height="20" width="20">
+                    <path fill="current"
+                          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+                </svg>
+            </a>
+        </p>
     </footer>
-    <script src="https://unpkg.com/htmx.org@1.9.4"></script>
     <script src="js/nav.js"></script>
     <script src="js/slider.js"></script>
     <script src="main.js"></script>
