hide scrollbars, change color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="waves" class="background"
-         hx-get="/html/background.html"
+         hx-get="html/background.html"
          hx-trigger="load">
     </div>
     <header>
@@ -34,25 +34,25 @@
     </header>
     <main>
         <section id="home"
-                 hx-get="/html/home.html"
+                 hx-get="html/home.html"
                  hx-trigger="intersect once">
             <div>Loading home section...</div>
         </section>
 
         <section id="about"
-                 hx-get="/html/about.html"
+                 hx-get="html/about.html"
                  hx-trigger="intersect once">
             <div>Loading about section...</div>
         </section>
 
         <section id="demos"
-                 hx-get="/html/demos.html"
+                 hx-get="html/demos.html"
                  hx-trigger="intersect once">
             <div>Loading demos section...</div>
         </section>
 
         <section id="contact"
-                 hx-get="/html/contact.html"
+                 hx-get="html/contact.html"
                  hx-trigger="intersect once">
             <div>Loading contact section...</div>
         </section>
