update chat description

--- a/html/demos.html
+++ b/html/demos.html
@@ -42,12 +42,12 @@
         Next up, I wanted to make something that would require a little more creativity.
         So I settled for a chat app. Why? Well, it requires a db, concurrency and some net-code.
         Until now I managed to avoid websockets, so there's sse instead.
+        Gotta try and stuff gRPC/protbuff in there somewhere as well, just for lulz.
         This is "the meat" so to speak.
-        At the moment the repo is private, but I will open it up once it feels ready.
     </p>
     <p>
-        <a href="https://github.com/traumst/min-chat" target="_blank">Here's the link to its repo</a>
-        Still private, will open it up soon.
+        <a href="https://github.com/traumst/min-chat" target="_blank">Here's the link to its repo,</a>
+        it's opensource now, I may even deploy it soon.
         "Just few more features"
     </p>
 </div>
